--- a/project.json
+++ b/project.json
@@ -1,6 +1,8 @@
 {
   "engine": "cocos-creator-js",
   "packages": "packages",
+  "name": "UNet",
+  "id": "5a02aacd-7550-4a8d-97f6-ccfb8957c461",
   "version": "2.2.2",
-  "id": "5a02aacd-7550-4a8d-97f6-ccfb8957c461"
+  "isNew": false
 }
