--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": [ "dom", "es5", "es2015.promise" ],
+    "lib": [ "dom", "es5", "es2015.promise","ES2015","ES2017" ],
     "target": "es5",
     "experimentalDecorators": true,
     "skipLibCheck": true
