--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,27 @@
 {
+  "name": "backend-.",
+  "version": "0.1.0",
+  "main": "index.js",
+  "private": true,
+  "scripts": {
+    "proto": "tsrpc proto",
+    "sync": "tsrpc link",
+    "api": "tsrpc api",
+    "doc": "tsrpc doc",
+    "dev": "tsrpc dev",
+    "test": "mocha test/**/*.test.ts",
+    "build": "tsrpc build"
+  },
+  "devDependencies": {
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^15.14.9",
+    "mocha": "^9.2.2",
+    "onchange": "^7.1.0",
+    "ts-node": "^10.9.1",
+    "tsrpc-cli": "^2.4.5",
+    "typescript": "^4.7.4"
+  },
   "dependencies": {
-    "ws": "^7.1.1"
+    "tsrpc": "^3.4.1"
   }
 }
